==> consp/lcd8-re/src/hal/lcd8h/at32f435/lcd.c <==
#include "at32f435_437.h"
#include "lcd.h"
#include "hal/lcd8/at32f435/lcd.h"
#include "uart.h"
#include <cmsis/core/cmsis_gcc.h>
#include <string.h>
#include <stdio.h>
#include "config.h"
#define STARTUP_COMMAND_LENGTH 14

void lcd_backlight_init(void) {
    crm_periph_clock_enable(CRM_TMR3_PERIPH_CLOCK, TRUE);

    tmr_base_init(TMR3, 100-1, TIMER_FREQ(10000000)); 
    /* tmr_base_init(TMR3, 10000-1, 1000000); // 10khz? */
    tmr_cnt_dir_set(TMR3, TMR_COUNT_UP);
    tmr_clock_source_div_set(TMR3, TMR_CLOCK_DIV1);

    tmr_output_config_type tmr_oc_init_structure;
    tmr_output_default_para_init(&tmr_oc_init_structure);
    tmr_oc_init_structure.oc_mode = TMR_OUTPUT_CONTROL_PWM_MODE_A;
    tmr_oc_init_structure.oc_idle_state = FALSE;
    tmr_oc_init_structure.oc_polarity = TMR_OUTPUT_ACTIVE_HIGH;
    tmr_oc_init_structure.oc_output_state = TRUE;
    tmr_output_channel_config(TMR3, TMR_SELECT_CHANNEL_2, &tmr_oc_init_structure);
    tmr_channel_value_set(TMR3, TMR_SELECT_CHANNEL_2, 0);
    tmr_output_channel_buffer_enable(TMR3, TMR_SELECT_CHANNEL_2, TRUE);
    tmr_period_buffer_enable(TMR3, TRUE);

    /* tmr enable counter */
    tmr_counter_enable(TMR3, TRUE);
}

void lcd_init(void) {
    
    crm_periph_clock_enable(CRM_GPIOA_PERIPH_CLOCK, TRUE); // we use all channels
    crm_periph_clock_enable(CRM_GPIOB_PERIPH_CLOCK, TRUE); // we use all channels
    crm_periph_clock_enable(CRM_GPIOC_PERIPH_CLOCK, TRUE); // we use all channels
    gpio_init_type gpio_initstructure;
    // remap
    /* crm_periph_clock_enable(CRM_IOMUX_PERIPH_CLOCK, TRUE); */
    /* gpio_pin_remap_config(SWJTAG_GMUX_010, TRUE); */

    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL;
    gpio_initstructure.gpio_pull           = GPIO_PULL_NONE; // external pullup
    gpio_initstructure.gpio_mode           = GPIO_MODE_OUTPUT;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;
    gpio_initstructure.gpio_pins           = GPIO_PINS_ALL;
    gpio_init(GPIOB, &gpio_initstructure);

    GPIOB->odt = 0xFFFF;

  // Backlight pin, pwm 
    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL;
    gpio_initstructure.gpio_pull           = GPIO_PULL_NONE; // external pullup
    gpio_initstructure.gpio_mode           = GPIO_MODE_MUX;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;
    gpio_initstructure.gpio_pins           = GPIO_PINS_7;
    gpio_init(GPIOA, &gpio_initstructure);

    gpio_pin_mux_config(GPIOA, GPIO_PINS_SOURCE7, GPIO_MUX_2);
    crm_periph_clock_enable(CRM_TMR3_PERIPH_CLOCK, TRUE);
    lcd_backlight_init();

    // init clocks

    // Read strobe
    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL;
    gpio_initstructure.gpio_pull           = GPIO_PULL_NONE; // external pullup
    gpio_initstructure.gpio_mode           = GPIO_MODE_OUTPUT;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;
    gpio_initstructure.gpio_pins           = PIN_READ;
    gpio_init(GPIOC, &gpio_initstructure);

    // Write strobe
    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL;
    gpio_initstructure.gpio_pull           = GPIO_PULL_NONE; // external pullup
    gpio_initstructure.gpio_mode           = GPIO_MODE_OUTPUT;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;
    gpio_initstructure.gpio_pins           = PIN_WRITE;
    gpio_init(GPIOC, &gpio_initstructure);

    // Command/Data
    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL;
    gpio_initstructure.gpio_pull           = GPIO_PULL_NONE; // external pullup
    gpio_initstructure.gpio_mode           = GPIO_MODE_OUTPUT;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;
    gpio_initstructure.gpio_pins           = PIN_CD;
    gpio_init(GPIOC, &gpio_initstructure);

    // cs
    gpio_initstructure.gpio_out_type       = GPIO_OUTPUT_PUSH_PULL;
    gpio_initstructure.gpio_pull           = GPIO_PULL_NONE; // external pullup
    gpio_initstructure.gpio_mode           = GPIO_MODE_OUTPUT;
    gpio_initstructure.gpio_drive_strength = GPIO_DRIVE_STRENGTH_STRONGER;
    gpio_initstructure.gpio_pins           = PIN_CS;
    gpio_init(GPIOC, &gpio_initstructure);

    //CLEAR_DATA();

    GPIOC->odt |= PIN_READ | PIN_WRITE | PIN_CD | PIN_CS; // force all high
    SET_WRITE();
    /* CS_ACTIVE; */

    WRITE_IDLE;


#ifdef DMA_WRITE

    crm_periph_clock_enable(CRM_DMA2_PERIPH_CLOCK, TRUE);
    crm_periph_clock_enable(CRM_TMR8_PERIPH_CLOCK, TRUE);

    gpio_pin_mux_config(GPIOC, GPIO_PINS_SOURCE9,  GPIO_MUX_3);

    static dma_init_type dma_init_struct = {0};

    tmr_reset(TMR8);
    /* tmr enable counter */
    tmr_output_config_type tmr_output_struct;
    tmr_base_init(TMR8, 15, 0);
    /* tmr_base_init(TMR8, 11, 0); */
    tmr_cnt_dir_set(TMR8, TMR_COUNT_UP);
    tmr_clock_source_div_set(TMR8, TMR_CLOCK_DIV1);
    tmr_output_default_para_init(&tmr_output_struct);
    tmr_output_struct.oc_mode = TMR_OUTPUT_CONTROL_PWM_MODE_B;
    tmr_output_struct.oc_output_state = TRUE;
    tmr_output_struct.oc_polarity = TMR_OUTPUT_ACTIVE_LOW;
    tmr_output_struct.oc_idle_state = TRUE;
    tmr_output_channel_config(TMR8, TMR_SELECT_CHANNEL_4, &tmr_output_struct);
    tmr_channel_value_set(TMR8, TMR_SELECT_CHANNEL_4, 9);
    /* tmr_channel_value_set(TMR8, TMR_SELECT_CHANNEL_4,  8); */

    /* tmr_interrupt_enable(TMR8, TMR_OVF_INT, TRUE); */

    /* tmr_dma_request_enable(TMR8, TMR_C4_DMA_REQUEST, TRUE); */
    tmr_dma_request_enable(TMR8, TMR_OVERFLOW_DMA_REQUEST, TRUE);

    dma_reset(DMA2_CHANNEL1);
    dma_init_struct.buffer_size = 0;
    dma_init_struct.direction = DMA_DIR_MEMORY_TO_PERIPHERAL;
    dma_init_struct.memory_base_addr = 0;
    dma_init_struct.memory_data_width = DMA_MEMORY_DATA_WIDTH_HALFWORD;
    dma_init_struct.memory_inc_enable = TRUE;
    dma_init_struct.peripheral_base_addr = (uint32_t)&GPIOB->odt;
    dma_init_struct.peripheral_data_width = DMA_PERIPHERAL_DATA_WIDTH_HALFWORD;
    dma_init_struct.peripheral_inc_enable = FALSE;
    dma_init_struct.priority = DMA_PRIORITY_HIGH;
    dma_init_struct.loop_mode_enable = FALSE;
    dma_init(DMA2_CHANNEL1, &dma_init_struct);

    dma_interrupt_enable(DMA2_CHANNEL1, DMA_FDT_INT, TRUE);
    nvic_priority_group_config(NVIC_PRIORITY_GROUP_4);
    nvic_irq_enable(DMA2_Channel1_IRQn, 0, 0);
    nvic_irq_enable(TMR8_OVF_TMR13_IRQn, 1, 0);

    
    dmamux_enable(DMA2, TRUE);
    dmamux_init(DMA2MUX_CHANNEL1, DMAMUX_DMAREQ_ID_TMR8_OVERFLOW);
    dma_channel_enable(DMA2_CHANNEL1, TRUE);
    /* dma_flexible_config(DMA2, FLEX_CHANNEL1, DMA_FLEXIBLE_TMR8_CH4); */
    /* dma_flexible_config(DMA2, FLEX_CHANNEL1, DMA_FLEXIBLE_TMR8_OVERFLOW); */
    
    TMR8->brk_bit.oen = 1;

    /* while(1) { */
    /*     dma_write(dma_test_data, 16); */
    /*     delay_us(10); */
    /* } */
#endif

    CS_ACTIVE;
}

CRITICAL void lcd_backlight(uint32_t value) { // 0-100
    tmr_channel_value_set(TMR3, TMR_SELECT_CHANNEL_2, value);
}

CRITICAL void read_register(uint8_t command, void *location, uint32_t bits, uint32_t num) {
    SET_WRITE();
    DELAY_NOP_20;
    write_cmd(command);
    CLEAR_DATA();
    SET_READ();
    /* //CS_ACTIVE; */
    if (bits) {
        uint16_t *location_16 = (uint16_t *) location;
        while (num--) {
            read_data_16bit(location_16++);
        }
    } else {
        uint8_t *location_8 = (uint8_t *) location;
        while (num--) {
            read_data_8bit(location_8++);
        }
    }
    /* //CS_IDLE; */
    SET_WRITE();
}

UG_RESULT lcd_fill(UG_S16 x1, UG_S16 y1, UG_S16 x2, UG_S16 y2, UG_COLOR color) {
   lcd_set_address_window(x1, y1, x2, y2);
   write_cmd(ILI_MEMORY_WRITE);
   lcd_fill_pixels(((x2-x1) + 1) * ((y2-y1) + 1), color);
   return UG_RESULT_OK;
}

CRITICAL void lcd_fill(uint32_t x1, uint32_t y1, uint32_t x2, uint32_t y2, uint16_t color) {
   lcd_set_address_window(x1, y1, x2, y2);
   write_cmd(ILI_MEMORY_WRITE);
   lcd_fill_pixels(((x2-x1) + 1) * ((y2-y1) + 1), color);
}

int lcd_start(void) {

    CS_IDLE;
    DELAY_NOP_20;
    CS_ACTIVE;
    DELAY_NOP_20;

    delay_ms(50);
    write_cmd(0x00);
    write_data(0x0001);
    write_cmd(ILI_SLEEP_OUT);
    delay_ms(170);
    if (!detect_lcd()) {
        return 0;
    }

    for (int i = 0; i < STARTUP_COMMAND_LENGTH; i++) {
        write_cmd(ili_startup_cmds[i].cmd);
        for (int x = 0; x < ili_startup_cmds[i].data_length; x++) {
            write_data_8bit(ili_startup_cmds[i].data[x]);
        }
    }
    write_cmd(ILI_SLEEP_OUT);
    delay_ms(120);
    write_cmd(ILI_DISPLAY_ON);
    delay_ms(200); // 186?
   
    lcd_set_address_window(0, 0, 319, 479);
    write_cmd(ILI_MEMORY_WRITE);
    lcd_fill(0, 0, 320, 480, RGB(255, 0, 0));
    return 1;
}

CRITICAL void lcd_lvgl_flush(lv_display_t *display, const lv_area_t *area, uint8_t *pixmap) {
/*     lv_display_flush_ready(display); */
/*     return; */
/* } */
/* CRITICAL void lcd_flush(lv_display_t *display, lv_area_t *area, uint8_t *pixmap) { */
#else
CRITICAL void lcd_lvgl_flush(lv_disp_drv_t *display, const lv_area_t *area, lv_color_t *pixmap) { 
#endif
#if LVGL_VERSION_MAJOR == 9
    uint32_t length = 0;
    length = 320 * (area->y2 - area->y1) + 1;
    /* length *= ((area->x2 - area->x1) + 1); */
    memcpy(&nar, area, sizeof(lv_area_t));
    nl = length;
    /* if (length % 2 == 1) { */
    /*     // if odd there is a x-1 offset for some reason */
    /*     length = (area->y2 - area->y1) + 1; */
    /*     length *= ((area->x2 - area->x1) + 2); */
    /* } */
    pixmap = (pixmap + (((area->y1 * DISPLAY_WIDTH)) * 2));
    uint16_t *pixels = (uint16_t *) pixmap;
#endif                                                    
#ifdef DMA_WRITE 
#pragma message "Using DMA"
    dp = display;
    dma_total = length; // if size > 65k it cannot be drawn in one go
    dma_write(pixels, nl, &nar);
#else
    write_cmd(ILI_MEMORY_WRITE);
    lcd_set_address_window(area->x1, area->y1, area->x2, area->y2);
/* #pragma GCC unroll 8 */
    while(length--) write_data(*pixels++);

#if LVGL_VERSION_MAJOR == 9
    if (display != NULL) lv_display_flush_ready(display);
#else
    if (display != NULL) lv_disp_flush_ready(display);
#endif
#endif
}


#if LVGL_VERSION_MAJOR == 9
CRITICAL void lcd_draw_large_text(uint32_t x, uint32_t y, const lv_image_dsc_t *img, lv_color_t clr) {
    uint16_t color = lv_color_to_u16(clr);
    if (img->header.cf == LV_COLOR_FORMAT_I1) {
#else
CRITICAL void lcd_draw_large_text(uint32_t x, uint32_t y, const lv_img_dsc_t *img, lv_color_t color) {
    if (img->header.cf == LV_IMG_CF_INDEXED_1BIT) {
#endif
        // images stored as 1bpp, need to iterate over and draw raw
#ifdef DMA_WRITE
        // items are 148*88, so 37 cycles
#define BLOB_LINES 4 
#define BLOB_SIZE (88*BLOB_LINES)
        uint16_t blob[BLOB_SIZE]; // expand and dma draw
        uint16_t blob2[BLOB_SIZE]; // expand and dma draw
        uint16_t *cb = NULL;
        uint8_t *data = (uint8_t *) img->data;
        data += 8;
        int cycles = 0;
        cb = (cb == blob) ? blob2 : blob ;
        while(cycles < 148 / BLOB_LINES) {
            // expand
            int32_t i = 0;
            while(i < BLOB_SIZE) {
                register uint32_t vdata = *data;
#if LVGL_VERSION_MAJOR == 8
                cb[i++] = (vdata & 0x80) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x40) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x20) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x10) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x08) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x04) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x02) ? 0x0000 : color.full;
                cb[i++] = (vdata & 0x01) ? 0x0000 : color.full;
#else 
                cb[i++] = (vdata & 0x80) ? 0x0000 : color;
                cb[i++] = (vdata & 0x40) ? 0x0000 : color;
                cb[i++] = (vdata & 0x20) ? 0x0000 : color;
                cb[i++] = (vdata & 0x10) ? 0x0000 : color;
                cb[i++] = (vdata & 0x08) ? 0x0000 : color;
                cb[i++] = (vdata & 0x04) ? 0x0000 : color;
                cb[i++] = (vdata & 0x02) ? 0x0000 : color;
                cb[i++] = (vdata & 0x01) ? 0x0000 : color;
#endif
                data++;
            }
            // wait
            while(!dma_ready);
            // set address
            lcd_set_address_window(x, y, x + img->header.w - 1, y + (BLOB_LINES - 1) < (y + img->header.h - 1) ? y + (BLOB_LINES - 1) : (y + img->header.h - 1));
            // send
            write_cmd(ILI_MEMORY_WRITE);
            DATA;
            /* dma_write(cb, BLOB_SIZE, x + img->header.w - 1, y + (BLOB_LINES - 1) < (y + img->header.h - 1) ? y + (BLOB_LINES - 1) : (y + img->header.h - 1)); */
            y += BLOB_LINES;
            cycles++;
            cb = (cb == blob) ? blob2 : blob;
        }
        while(!dma_ready);
#else
        lcd_set_address_window(x, y, x + img->header.w - 1, y + img->header.h - 1);
        uint32_t length = (img->header.w * img->header.h) >> 3;
        uint8_t *data = (uint8_t *) img->data;
        data += 8;
        write_cmd(ILI_MEMORY_WRITE);
        while(length--) {
            // convert
            register uint32_t vdata = *data;
#if LVGL_VERSION_MAJOR == 8
            write_data((vdata & 0x80) ? 0x0000 : color.full);
            write_data((vdata & 0x40) ? 0x0000 : color.full);
            write_data((vdata & 0x20) ? 0x0000 : color.full);
            write_data((vdata & 0x10) ? 0x0000 : color.full);
            write_data((vdata & 0x08) ? 0x0000 : color.full);
            write_data((vdata & 0x04) ? 0x0000 : color.full);
            write_data((vdata & 0x02) ? 0x0000 : color.full);
            write_data((vdata & 0x01) ? 0x0000 : color.full);
#else 
            write_data((vdata & 0x80) ? 0x0000 : color);
            write_data((vdata & 0x40) ? 0x0000 : color);
            write_data((vdata & 0x20) ? 0x0000 : color);
            write_data((vdata & 0x10) ? 0x0000 : color);
            write_data((vdata & 0x08) ? 0x0000 : color);
            write_data((vdata & 0x04) ? 0x0000 : color);
            write_data((vdata & 0x02) ? 0x0000 : color);
            write_data((vdata & 0x01) ? 0x0000 : color);
#endif
            data++;
        }
#endif
    }
}
